# whoosh-novo

./: .pre-commit-config.yaml  .sonarcloud.properties  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: _nox-session.yml  auto-merge.yml  deploy-github-pages.yml  first-interaction.yml  issue_labeler.yml  nox-cov.yml  nox-test.yml  python-publish.yml  ruff.yml  test.yml  tox-cov.yml  tox-test.yml
benchmark/: marc21.py
docs/source/: conf.py
src/whoosh/: classify.py  columns.py  externalsort.py  fields.py  highlight.py  index.py  multiproc.py  reading.py  searching.py  sorting.py  writing.py
src/whoosh/analysis/: __init__.py  acore.py  analyzers.py  filters.py  intraword.py  morph.py  ngrams.py  tokenizers.py
src/whoosh/automata/: fst.py
src/whoosh/codec/: plaintext.py  whoosh2.py  whoosh3.py
src/whoosh/filedb/: compound.py  filepostings.py  filereading.py  filestore.py  filetables.py  pools.py
src/whoosh/lang/: __init__.py  dmetaphone.py  isri.py  lovins.py  morph_en.py  porter.py  porter2.py  stopwords.py
src/whoosh/lang/snowball/: __init__.py  dutch.py  english.py  finnish.py  french.py  german.py  italian.py  romanian.py  spanish.py
src/whoosh/matching/: wrappers.py
src/whoosh/protocols/: __init__.py  logger.py
src/whoosh/qparser/: common.py  dateparse.py  plugins.py  syntax.py
src/whoosh/query/: positional.py  ranges.py  terms.py  wrappers.py
src/whoosh/support/: base85.py  bench.py  bitvector.py  charset.py  levenshtein.py  pyparsing.py  relativedelta.py
src/whoosh/util/: loading.py  numeric.py  numlists.py  testing.py  text.py
stress/: test_bigtable.py  test_hugeindex.py  test_update.py
tests/: test_analysis.py  test_codecs.py  test_collector.py  test_columns.py  test_fields.py  test_indexing.py  test_mpwriter.py  test_parse_plugins.py  test_queries.py  test_reading.py  test_results.py  test_searching.py  test_sorting.py  test_spans.py  test_vectors.py  test_weightings.py  test_writing.py
